--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "include": ["src", "ts-type-helpers.d.ts"],
   "exclude": [],
   "compilerOptions": {
-    "moduleResolution": "node"
+    // "moduleResolution": "node"
+    "allowImportingTsExtensions": true
   }
 }
