--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
   "include": ["src", "ts-type-helpers.d.ts"],
   "exclude": [],
   "compilerOptions": {
+    // TODO: 拆分tsconfig.json tsconfig.dom.json tsconfig.node.json
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     // "moduleResolution": "node"
     "allowImportingTsExtensions": true
   }
