--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "utils4u",
   "type": "module",
   "packageManager": "pnpm@8.6.8",
-  "version": "1.0.13",
+  "version": "1.0.18",
   "description": "",
   "author": "",
   "repository": {
@@ -17,6 +17,8 @@
     "clean": "rimraf dist",
     "prepublishOnly": "pnpm run build"
   },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
