--- a/package.json
+++ b/package.json
@@ -33,11 +33,15 @@
   "license": "ISC",
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
+    "bun-types": "latest",
     "rimraf": "^5.0.5",
-    "rollup": "^4.4.0",
+    "rollup": "^4.8.0",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-esbuild": "^6.1.0",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.0"
+    "typescript": "^5.3.3",
+    "vite": "^5.0.8"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
