--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,13 @@ jobs:
           registry-url: https://registry.npmjs.org/
           cache: 'pnpm'
           cache-dependency-path: './pnpm-lock.yaml'
-          
+
       - run: pnpm install
 
       - uses: oven-sh/setup-bun@v1
       - run: bun test
 
-      - run: pnpm build
-
+      
+      - run: npm publish --access public --dry-run
+        env:
+          NPM_CONFIG_PROVENANCE: true
