--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,15 +20,14 @@ jobs:
         with:
           node-version: 18
           registry-url: https://registry.npmjs.org/
-          cache: 'pnpm'
-          cache-dependency-path: './pnpm-lock.yaml'
+          cache: "pnpm"
+          cache-dependency-path: "./pnpm-lock.yaml"
 
       - run: pnpm install
 
       - uses: oven-sh/setup-bun@v1
       - run: bun test
 
-      
       - run: npm publish --access public --dry-run
         env:
           NPM_CONFIG_PROVENANCE: true
