--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -24,8 +24,8 @@ jobs:
         with:
           node-version: 18
           registry-url: https://registry.npmjs.org/
-          cache: 'pnpm'
-          cache-dependency-path: './pnpm-lock.yaml'
+          cache: "pnpm"
+          cache-dependency-path: "./pnpm-lock.yaml"
 
       - run: pnpm install
 
