feat: utils4u/vue-router

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "utils4u",
   "version": "2.0.0",
-  "description": "",
+  "description": "Utilities for you",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yanhao98/utils4u.git"
@@ -17,6 +17,10 @@
     "./vite": {
       "types": "./dist/vite/index.d.mts",
       "default": "./dist/vite/index.mjs"
+    },
+    "./vue-router": {
+      "types": "./dist/vue-router/index.d.mts",
+      "default": "./dist/vue-router/index.mjs"
     }
   },
   "main": "dist/index.mjs",
@@ -39,18 +43,25 @@
     "test:types": "tsc --noEmit --skipLibCheck"
   },
   "devDependencies": {
-    "@types/node": "^22.1.0",
+    "@types/node": "^22.5.0",
+    "@types/nprogress": "^0.2.3",
     "@vitest/coverage-v8": "^2.0.5",
+    "@vue/test-utils": "^2.4.6",
     "automd": "^0.3.8",
     "changelogen": "^0.5.5",
-    "eslint": "^9.8.0",
+    "eslint": "^9.9.1",
     "eslint-config-unjs": "^0.3.2",
-    "jiti": "^2.0.0-beta.3",
+    "happy-dom": "^15.0.0",
+    "jiti": "2.0.0-beta.3",
+    "jsdom": "^25.0.0",
+    "nprogress": "^0.2.0",
     "prettier": "^3.3.3",
     "typescript": "^5.5.4",
-    "unbuild": "^3.0.0-rc.7",
+    "unbuild": "3.0.0-rc.7",
     "vite": "^5.4.2",
-    "vitest": "^2.0.5"
+    "vitest": "^2.0.5",
+    "vue-router": "^4.4.3",
+    "vue-router-mock": "^1.1.0"
   },
   "packageManager": "pnpm@9.8.0"
 }
