--- a/package.json
+++ b/package.json
@@ -25,6 +25,14 @@
     "./rollup": {
       "types": "./dist/rollup/index.d.mts",
       "default": "./dist/rollup/index.mjs"
+    },
+    "./tdesign-mobile-vue": {
+      "types": "./dist/tdesign-mobile-vue/index.d.ts",
+      "default": "./dist/tdesign-mobile-vue/index.js"
+    },
+    "./vant": {
+      "types": "./dist/tdesign-mobile-vue/index.d.ts",
+      "default": "./dist/tdesign-mobile-vue/index.js"
     }
   },
   "main": "dist/index.mjs",
@@ -34,7 +42,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "unbuild",
+    "build": "esno scripts/build.ts",
     "build:watch": "unbuild --watch",
     "build:stub": "unbuild --stub",
     "dev": "vitest dev",
@@ -47,7 +55,12 @@
     "test:types": "tsc --noEmit --skipLibCheck"
   },
   "devDependencies": {
-    "@types/node": "^22.5.0",
+    "@microsoft/api-extractor": "^7.47.7",
+    "@rsbuild/plugin-babel": "1.0.1-rc.2",
+    "@rsbuild/plugin-vue": "1.0.1-rc.2",
+    "@rsbuild/plugin-vue-jsx": "1.0.1-rc.2",
+    "@rslib/core": "^0.0.4",
+    "@types/node": "^22.5.2",
     "@types/nprogress": "^0.2.3",
     "@vitest/coverage-v8": "^2.0.5",
     "@vue/test-utils": "^2.4.6",
@@ -55,16 +68,22 @@
     "changelogen": "^0.5.5",
     "eslint": "^9.9.1",
     "eslint-config-unjs": "^0.3.2",
-    "happy-dom": "^15.0.0",
+    "esno": "^4.7.0",
+    "fast-glob": "^3.3.2",
+    "happy-dom": "^15.7.3",
     "jiti": "2.0.0-beta.3",
     "jsdom": "^25.0.0",
     "nprogress": "^0.2.0",
     "pinyin-pro": "^3.24.2",
     "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
+    "tdesign-mobile-vue": "^1.4.1",
     "typescript": "^5.5.4",
     "unbuild": "3.0.0-rc.7",
+    "vant": "^4.9.4",
     "vite": "^5.4.2",
     "vitest": "^2.0.5",
+    "vue": "^3.4.38",
     "vue-router": "^4.4.3",
     "vue-router-mock": "^1.1.0"
   },
