chore: Add dayjs npm dependency and update popup.tsx to include new date picker functions

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@vue/test-utils": "^2.4.6",
     "automd": "^0.3.8",
     "changelogen": "^0.5.5",
+    "dayjs": "^1.11.13",
     "eslint": "^9.9.1",
     "eslint-config-unjs": "^0.3.2",
     "esno": "^4.7.0",
