--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "./vue-use": {
       "types": "./dist/vue-use/index.d.mts",
       "default": "./dist/vue-use/index.mjs"
+    },
+    "./browser": {
+      "types": "./dist/browser/index.d.mts",
+      "default": "./dist/browser/index.mjs"
     }
   },
   "main": "dist/index.mjs",
