Update devDependencies in package.json

--- a/package.json
+++ b/package.json
@@ -63,38 +63,38 @@
     "test:types": "tsc --noEmit --skipLibCheck"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.47.7",
-    "@rsbuild/plugin-babel": "1.0.1-rc.2",
-    "@rsbuild/plugin-vue": "1.0.1-rc.2",
-    "@rsbuild/plugin-vue-jsx": "1.0.1-rc.2",
-    "@rslib/core": "^0.0.4",
-    "@types/node": "^22.5.2",
+    "@microsoft/api-extractor": "^7.47.9",
+    "@rsbuild/plugin-babel": "1.0.1",
+    "@rsbuild/plugin-vue": "1.0.1",
+    "@rsbuild/plugin-vue-jsx": "1.0.1",
+    "@rslib/core": "^0.0.6",
+    "@types/node": "^22.5.5",
     "@types/nprogress": "^0.2.3",
-    "@vitest/coverage-v8": "^2.0.5",
+    "@vitest/coverage-v8": "^2.1.1",
     "@vue/test-utils": "^2.4.6",
     "automd": "^0.3.8",
     "changelogen": "^0.5.5",
     "dayjs": "^1.11.13",
-    "eslint": "^9.9.1",
+    "eslint": "^9.10.0",
     "eslint-config-unjs": "^0.3.2",
     "esno": "^4.7.0",
     "fast-glob": "^3.3.2",
-    "happy-dom": "^15.7.3",
+    "happy-dom": "^15.7.4",
     "jiti": "2.0.0-beta.3",
     "jsdom": "^25.0.0",
     "nprogress": "^0.2.0",
     "pinyin-pro": "^3.24.2",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
-    "tdesign-mobile-vue": "^1.4.1",
-    "typescript": "^5.5.4",
+    "tdesign-mobile-vue": "^1.4.2",
+    "typescript": "^5.6.2",
     "unbuild": "3.0.0-rc.7",
-    "vant": "^4.9.4",
-    "vite": "^5.4.2",
-    "vitest": "^2.0.5",
-    "vue": "^3.4.38",
-    "vue-router": "^4.4.3",
+    "vant": "^4.9.5",
+    "vite": "^5.4.5",
+    "vitest": "^2.1.1",
+    "vue": "^3.5.5",
+    "vue-router": "^4.4.5",
     "vue-router-mock": "^1.1.0"
   },
-  "packageManager": "pnpm@9.8.0"
+  "packageManager": "pnpm@9.10.0"
 }
