--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,4 @@
 {
-	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": [
-		"https://git.1-h.cc/examples/renovate-example/raw/branch/main/default.json5"
-	]
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": ["https://git.1-h.cc/examples/renovate-example/raw/branch/main/default.json5"]
 }
