Update renovate.json [skip ci]

--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,5 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["https://git.1-h.cc/examples/renovate-example/raw/branch/main/default.json5"]
+  "extends": ["https://git.1-h.cc/examples/renovate-example/raw/branch/main/default.json5"],
+  "dependencyDashboard": false
 }
