--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "utils4u",
-  "version": "2.11.0",
+  "version": "2.12.0",
   "description": "Utilities for you",
   "repository": {
     "type": "git",
@@ -63,38 +63,38 @@
     "test:types": "tsc --noEmit --skipLibCheck"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.47.9",
-    "@rsbuild/plugin-babel": "1.0.1",
-    "@rsbuild/plugin-vue": "1.0.1",
+    "@microsoft/api-extractor": "^7.47.11",
+    "@rsbuild/plugin-babel": "1.0.3",
+    "@rsbuild/plugin-vue": "1.0.4",
     "@rsbuild/plugin-vue-jsx": "1.0.1",
-    "@rslib/core": "^0.0.6",
-    "@types/node": "^22.5.5",
+    "@rslib/core": "^0.0.18",
+    "@types/node": "^22.9.0",
     "@types/nprogress": "^0.2.3",
-    "@vitest/coverage-v8": "^2.1.1",
+    "@vitest/coverage-v8": "^2.1.5",
     "@vue/test-utils": "^2.4.6",
-    "automd": "^0.3.8",
+    "automd": "^0.3.12",
     "changelogen": "^0.5.7",
     "dayjs": "^1.11.13",
-    "eslint": "^9.11.0",
-    "eslint-config-unjs": "^0.3.2",
-    "esno": "^4.7.0",
+    "eslint": "^9.14.0",
+    "eslint-config-unjs": "^0.4.1",
+    "esno": "^4.8.0",
     "fast-glob": "^3.3.2",
-    "happy-dom": "^15.7.4",
+    "happy-dom": "^15.11.6",
     "jiti": "2.0.0-rc.1",
     "jsdom": "^25.0.1",
     "nprogress": "^0.2.0",
-    "pinyin-pro": "^3.24.2",
+    "pinyin-pro": "^3.26.0",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
-    "tdesign-mobile-vue": "^1.4.2",
-    "typescript": "^5.6.2",
-    "unbuild": "3.0.0-rc.7",
-    "vant": "^4.9.7",
-    "vite": "^5.4.7",
-    "vitest": "^2.1.1",
-    "vue": "^3.5.8",
+    "tdesign-mobile-vue": "^1.5.0",
+    "typescript": "^5.6.3",
+    "unbuild": "rc",
+    "vant": "^4.9.8",
+    "vite": "^5.4.11",
+    "vitest": "^2.1.5",
+    "vue": "^3.5.12",
     "vue-router": "^4.4.5",
     "vue-router-mock": "^1.1.0"
   },
-  "packageManager": "pnpm@9.11.0"
+  "packageManager": "pnpm@9.13.0"
 }
