--- a/package.json
+++ b/package.json
@@ -63,38 +63,39 @@
     "test:types": "tsc --noEmit --skipLibCheck"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.47.11",
+    "@microsoft/api-extractor": "^7.48.1",
     "@rsbuild/plugin-babel": "1.0.3",
-    "@rsbuild/plugin-vue": "1.0.4",
-    "@rsbuild/plugin-vue-jsx": "1.0.1",
-    "@rslib/core": "^0.0.18",
-    "@types/node": "^22.9.0",
+    "@rsbuild/plugin-vue": "1.0.5",
+    "@rsbuild/plugin-vue-jsx": "1.1.0",
+    "@rslib/core": "^0.1.4",
+    "@types/node": "^22.10.2",
     "@types/nprogress": "^0.2.3",
-    "@vitest/coverage-v8": "^2.1.5",
+    "@vitest/coverage-v8": "^2.1.8",
     "@vue/test-utils": "^2.4.6",
     "automd": "^0.3.12",
     "changelogen": "^0.5.7",
     "dayjs": "^1.11.13",
-    "eslint": "^9.14.0",
-    "eslint-config-unjs": "^0.4.1",
+    "eslint": "^9.17.0",
+    "eslint-config-unjs": "^0.4.2",
     "esno": "^4.8.0",
     "fast-glob": "^3.3.2",
-    "happy-dom": "^15.11.6",
+    "happy-dom": "^15.11.7",
     "jiti": "2.0.0-rc.1",
     "jsdom": "^25.0.1",
     "nprogress": "^0.2.0",
     "pinyin-pro": "^3.26.0",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.2",
     "rimraf": "^6.0.1",
-    "tdesign-mobile-vue": "^1.5.0",
-    "typescript": "^5.6.3",
-    "unbuild": "rc",
-    "vant": "^4.9.8",
-    "vite": "^5.4.11",
-    "vitest": "^2.1.5",
-    "vue": "^3.5.12",
-    "vue-router": "^4.4.5",
+    "tdesign-mobile-vue": "^1.6.0",
+    "typescript": "^5.7.2",
+    "unbuild": "3.0.1",
+    "unplugin-auto-import": "^0.19.0",
+    "vant": "^4.9.10",
+    "vite": "^6.0.3",
+    "vitest": "^2.1.8",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0",
     "vue-router-mock": "^1.1.0"
   },
-  "packageManager": "pnpm@9.13.0"
+  "packageManager": "pnpm@9.15.0"
 }
