--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
     "./browser": {
       "types": "./dist/browser/index.d.mts",
       "default": "./dist/browser/index.mjs"
+    },
+    "./auto-imports": {
+      "types": "./dist/auto-imports/index.d.mts",
+      "default": "./dist/auto-imports/index.mjs"
     }
   },
   "main": "dist/index.mjs",
