--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "automd": "^0.3.12",
     "changelogen": "^0.5.7",
     "dayjs": "^1.11.13",
+    "deep-freeze-es6": "^3.0.2",
     "eslint": "^9.17.0",
     "eslint-config-unjs": "^0.4.2",
     "esno": "^4.8.0",
