--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
     "./auto-imports": {
       "types": "./dist/auto-imports/index.d.mts",
       "default": "./dist/auto-imports/index.mjs"
+    },
+    "./primevue": {
+      "types": "./dist/primevue/index.d.mts",
+      "default": "./dist/primevue/index.mjs"
     }
   },
   "main": "dist/index.mjs",
@@ -71,7 +75,7 @@
     "@rsbuild/plugin-babel": "1.0.3",
     "@rsbuild/plugin-vue": "1.0.5",
     "@rsbuild/plugin-vue-jsx": "1.1.0",
-    "@rslib/core": "^0.1.4",
+    "@rslib/core": "^0.1.5",
     "@types/node": "^22.10.2",
     "@types/nprogress": "^0.2.3",
     "@vitest/coverage-v8": "^2.1.8",
@@ -85,17 +89,18 @@
     "esno": "^4.8.0",
     "fast-glob": "^3.3.2",
     "happy-dom": "^15.11.7",
-    "jiti": "2.0.0-rc.1",
+    "jiti": "2.4.2",
     "jsdom": "^25.0.1",
     "nprogress": "^0.2.0",
     "pinyin-pro": "^3.26.0",
     "prettier": "^3.4.2",
+    "primevue": "^4.2.5",
     "rimraf": "^6.0.1",
     "tdesign-mobile-vue": "^1.6.0",
     "typescript": "^5.7.2",
     "unbuild": "3.0.1",
     "unplugin-auto-import": "^0.19.0",
-    "vant": "^4.9.10",
+    "vant": "^4.9.15",
     "vite": "^6.0.3",
     "vitest": "^2.1.8",
     "vue": "^3.5.13",
