--- a/package.json
+++ b/package.json
@@ -49,6 +49,10 @@
     "./primevue": {
       "types": "./dist/primevue/index.d.ts",
       "default": "./dist/primevue/index.js"
+    },
+    "./array": {
+      "types": "./dist/array/index.d.mts",
+      "default": "./dist/array/index.mjs"
     }
   },
   "main": "dist/index.mjs",
