--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "utils4u",
   "version": "3.0.0",
+  "description": "Utilities for you",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yanhao98/utils4u.git"
+  },
+  "license": "MIT",
+  "files": [
+    "dist"
+  ],
+  "sideEffects": false,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "test:unit": "vitest",
-    "build-only": "vite build",
+    "dev": "vitest dev",
+    "build": "vite build",
     "type-check": "vue-tsc --build",
     "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
     "lint:eslint": "eslint . --fix",
@@ -15,10 +22,38 @@
     "format": "prettier --write src/"
   },
   "peerDependencies": {
-    "vue": "^3.5.13"
+    "@vueuse/core": "^12.3.0",
+    "dayjs": "^1.11.13",
+    "nprogress": "^0.2.0",
+    "primevue": "^4.2.5",
+    "tdesign-mobile-vue": "^1.7.0",
+    "vant": "^4.9.15",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "peerDependenciesMeta": {
     "vue": {
+      "optional": true
+    },
+    "vue-router": {
+      "optional": true
+    },
+    "nprogress": {
+      "optional": true
+    },
+    "tdesign-mobile-vue": {
+      "optional": true
+    },
+    "primevue": {
+      "optional": true
+    },
+    "vant": {
+      "optional": true
+    },
+    "dayjs": {
+      "optional": true
+    },
+    "@vueuse/core": {
       "optional": true
     }
   },
@@ -26,6 +61,7 @@
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.10.5",
+    "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vitest/eslint-plugin": "1.1.24",
@@ -33,17 +69,23 @@
     "@vue/eslint-config-typescript": "^14.2.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "@vueuse/core": "^12.3.0",
     "eslint": "^9.17.0",
     "eslint-plugin-oxlint": "^0.15.5",
     "eslint-plugin-vue": "^9.32.0",
+    "happy-dom": "^16.3.0",
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.2",
+    "nprogress": "^0.2.0",
     "oxlint": "^0.15.5",
     "prettier": "^3.4.2",
+    "terser": "^5.37.0",
+    "tinyglobby": "^0.2.10",
     "typescript": "~5.7.2",
     "vite": "^6.0.7",
     "vite-plugin-dts": "^4.4.0",
     "vitest": "^2.1.8",
+    "vue-router-mock": "^1.1.0",
     "vue-tsc": "^2.2.0"
   }
 }
