--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,12 +1,10 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
-  "exclude": ["src/**/__tests__/*"],
+  "include": ["src/**/*", "src/**/*.vue"],
+  "exclude": ["src/**/*.spec.ts"],
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "types": ["vite/client"]
   }
 }
