添加 @vitest/coverage-v8 依赖，更新 pnpm-lock.yaml 文件

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
+    "@vitest/coverage-v8": "2.1.8",
     "@vitest/eslint-plugin": "1.1.24",
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.2.0",
