--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
     "lint:eslint": "eslint . --fix",
     "lint": "run-s lint:*",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "prepublishOnly": "npm run build && npm run type-check",
+    "tgz": "npm run build && npm pack"
   },
   "peerDependencies": {
     "@vueuse/core": "^12.3.0",
@@ -88,5 +90,50 @@
     "vitest": "^2.1.8",
     "vue-router-mock": "^1.1.0",
     "vue-tsc": "^2.2.0"
-  }
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./array": {
+      "types": "./dist/array/index.d.ts",
+      "default": "./dist/array/index.js"
+    },
+    "./auto-imports": {
+      "types": "./dist/auto-imports/index.d.ts",
+      "default": "./dist/auto-imports/index.js"
+    },
+    "./browser": {
+      "types": "./dist/browser/index.d.ts",
+      "default": "./dist/browser/index.js"
+    },
+    "./primevue": {
+      "types": "./dist/primevue/index.d.ts",
+      "default": "./dist/primevue/index.js"
+    },
+    "./tdesign-mobile-vue": {
+      "types": "./dist/tdesign-mobile-vue/index.d.ts",
+      "default": "./dist/tdesign-mobile-vue/index.js"
+    },
+    "./vant": {
+      "types": "./dist/vant/index.d.ts",
+      "default": "./dist/vant/index.js"
+    },
+    "./vite": {
+      "types": "./dist/vite/index.d.ts",
+      "default": "./dist/vite/index.js"
+    },
+    "./vue-router": {
+      "types": "./dist/vue-router/index.d.ts",
+      "default": "./dist/vue-router/index.js"
+    },
+    "./vue-use": {
+      "types": "./dist/vue-use/index.d.ts",
+      "default": "./dist/vue-use/index.js"
+    }
+  },
+  "types": "./dist/index.d.ts",
+  "module": "./dist/index.js",
+  "main": "./dist/index.js"
 }
