--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "type": "module",
   "scripts": {
     "dev": "vitest dev",
+    "test:cov": "vitest --coverage",
+    "test:run": "vitest run",
     "build": "vite build",
     "type-check": "vue-tsc --build",
     "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
