--- a/.github/workflows/autofix.yaml
+++ b/.github/workflows/autofix.yaml
@@ -1,10 +1,8 @@
 name: autofix.ci # needed to securely identify the workflow
-
 on:
   pull_request:
   push:
     branches: ['main', 'vite']
-
 permissions:
   contents: read
 
@@ -13,7 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: yanhao98/composite-actions/setup-node-environment@main
+
+      - run: pnpm format
       - run: pnpm lint
-      - uses: autofix-ci/action@ff86a557419858bb967097bfc916833f5647fa8c
+
+      - uses: autofix-ci/action@v1
         with:
           commit-message: 'chore: apply automated updates'
