--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.13.1",
+    "@types/node": "^22.13.4",
     "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
@@ -74,24 +74,26 @@
     "@vue/eslint-config-typescript": "^14.4.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
-    "@vueuse/core": "^12.5.0",
-    "eslint": "^9.20.0",
-    "eslint-plugin-oxlint": "^0.15.10",
+    "@vueuse/core": "^12.7.0",
+    "eslint": "^9.20.1",
+    "eslint-plugin-oxlint": "^0.15.11",
     "eslint-plugin-vue": "^9.32.0",
-    "happy-dom": "^17.0.3",
+    "happy-dom": "^17.1.1",
     "jsdom": "^26.0.0",
     "npm-run-all2": "^7.0.2",
     "nprogress": "^0.2.0",
-    "oxlint": "^0.15.10",
-    "prettier": "^3.5.0",
-    "terser": "^5.38.1",
-    "tinyglobby": "^0.2.10",
+    "oxlint": "^0.15.11",
+    "prettier": "^3.5.1",
+    "terser": "^5.39.0",
+    "tinybench": "^3.1.1",
+    "tinyglobby": "^0.2.12",
+    "tsx": "^4.19.3",
     "typescript": "~5.7.3",
-    "vite": "^6.1.0",
+    "vite": "^6.1.1",
     "vite-plugin-dts": "^4.5.0",
-    "vitest": "^3.0.5",
+    "vitest": "^3.0.6",
     "vue-router-mock": "^1.1.0",
-    "vue-tsc": "^2.2.0"
+    "vue-tsc": "^2.2.2"
   },
   "exports": {
     ".": {
