chore: 在 CI 工作流中添加 publint 以增强代码质量检查

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,6 +18,7 @@ jobs:
       - run: pnpm lint
       - run: pnpm type-check
       - run: pnpm build
+      - run: pnpx publint # https://publint.dev/
       - run: pnpm vitest --coverage
       - uses: codecov/codecov-action@v4
         with:
