--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "vite build",
     "type-check": "vue-tsc --build",
     "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
-    "lint:eslint": "eslint . --fix",
+    "lint:eslint": "eslint . --fix --config=eslint.config.ts",
     "lint": "run-s lint:*",
     "format": "prettier --write src/",
     "prepublishOnly": "npm run build && npm run type-check",
@@ -63,41 +63,41 @@
     }
   },
   "devDependencies": {
-    "@size-limit/preset-small-lib": "^11.2.0",
-    "@size-limit/time": "^11.2.0",
-    "@tsconfig/node22": "^22.0.1",
-    "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.13.13",
+    "@size-limit/preset-small-lib": "^12.0.0",
+    "@size-limit/time": "^12.0.0",
+    "@tsconfig/node22": "^22.0.5",
+    "@types/jsdom": "^27.0.0",
+    "@types/node": "^24.10.1",
     "@types/nprogress": "^0.2.3",
-    "@vitejs/plugin-vue": "^5.2.3",
-    "@vitejs/plugin-vue-jsx": "^4.1.2",
-    "@vitest/coverage-v8": "3.0.9",
-    "@vitest/eslint-plugin": "1.1.38",
+    "@vitejs/plugin-vue": "^6.0.2",
+    "@vitejs/plugin-vue-jsx": "^5.1.2",
+    "@vitest/coverage-v8": "4.0.15",
+    "@vitest/eslint-plugin": "1.5.2",
     "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^14.5.0",
+    "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/test-utils": "^2.4.6",
-    "@vue/tsconfig": "^0.7.0",
-    "@vueuse/core": "^13.0.0",
-    "eslint": "^9.23.0",
-    "eslint-plugin-oxlint": "^0.16.2",
-    "eslint-plugin-vue": "^10.0.0",
-    "happy-dom": "^17.4.4",
-    "jsdom": "^26.0.0",
-    "npm-run-all2": "^7.0.2",
+    "@vue/tsconfig": "^0.8.1",
+    "@vueuse/core": "^14.1.0",
+    "eslint": "^9.39.1",
+    "eslint-plugin-oxlint": "^1.32.0",
+    "eslint-plugin-vue": "^10.6.2",
+    "happy-dom": "^20.0.11",
+    "jsdom": "^27.3.0",
+    "npm-run-all2": "^8.0.4",
     "nprogress": "^0.2.0",
-    "oxlint": "^0.16.2",
-    "prettier": "^3.5.3",
-    "size-limit": "^11.2.0",
-    "terser": "^5.39.0",
-    "tinybench": "^4.0.1",
-    "tinyglobby": "^0.2.12",
-    "tsx": "^4.19.3",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.3",
-    "vite-plugin-dts": "^4.5.3",
-    "vitest": "^3.0.9",
-    "vue-router-mock": "^1.1.0",
-    "vue-tsc": "^2.2.8"
+    "oxlint": "^1.32.0",
+    "prettier": "^3.7.4",
+    "size-limit": "^12.0.0",
+    "terser": "^5.44.1",
+    "tinybench": "^6.0.0",
+    "tinyglobby": "^0.2.15",
+    "tsx": "^4.21.0",
+    "typescript": "~5.9.3",
+    "vite": "^7.2.7",
+    "vite-plugin-dts": "^4.5.4",
+    "vitest": "^4.0.15",
+    "vue-router-mock": "^2.0.0",
+    "vue-tsc": "^3.1.7"
   },
   "exports": {
     ".": {
